--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-node_modules
-
 # Output
 .output
 .vercel
@@ -15,9 +13,15 @@ Thumbs.db
 # Env
 .env
 .env.*
+*.env.*
 !.env.example
 !.env.test
 
 # Vite
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+# Bun
+node_modules
+bun.lock
+
